# python4javaer

./: .env.example  .gitignore  CHANGELOG.md  README.md  calculator.py  convert_icons.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_codex.py  todo.db  依赖管理指南.md  功能扩展计划.md  快速开始指南.md  狗狗百宝箱_工具箱扩展计划与验收.md  网关_RBAC_后端联调说明.md  补充内容总结.md  计划.md  项目完成总结.md
.github/workflows/: build-desktop.yml
01.Python语言基础/: 01.Python语言基础.md
01.Python语言基础/01_快速上手与基本语法/: 01_快速上手与基本语法.md  demo_hello.py  practice_basic_io.py
01.Python语言基础/02_变量_数据类型_运算符/: 02_变量_数据类型_运算符.md  demo_types_ops.py  practice_types.py
01.Python语言基础/03_条件判断与分支/: 03_条件判断与分支.md  demo_conditions.py  practice_conditions.py
01.Python语言基础/04_循环与迭代/: 04_循环与迭代.md  demo_loops.py  practice_loops.py
01.Python语言基础/05_序列与集合类型/: 05_序列与集合类型.md  demo_containers.py  practice_containers.py
01.Python语言基础/06_函数与参数/: 06_函数与参数.md  demo_functions.py  practice_functions.py
01.Python语言基础/07_模块与包基础/: 07_模块与包基础.md  demo_modules.py  practice_modules.py
01.Python语言基础/08_异常与文件基础/: 08_异常与文件基础.md  demo_exceptions_files.py  practice_exceptions_files.py
01.Python语言基础/09_面向对象入门/: 09_面向对象入门.md  advanced_oop.md  demo_oop.py  demo_oop_advanced.py  practice_oop.py
01.Python语言基础/10_迭代器与生成器/: 10_迭代器与生成器.md  demo_iterators_generators.py  practice_iterators_generators.py
01.Python语言基础/11_lambda表达式与装饰器/: 11_lambda表达式与装饰器.md  demo_hof_partial.py  demo_lambda_decorators.py  practice_lambda_decorators.py
01.Python语言基础/12_命名空间_作用域_类型注解/: 12_命名空间_作用域_类型注解.md  demo_scope_typing.py  practice_scope_typing.py
01.Python语言基础/13_更多运算符与表达式细节/: 13_更多运算符与表达式细节.md  demo_operators.py  practice_operators.py
01.Python语言基础/14_开发技巧_写法优化/: 14_开发技巧_写法优化.md
01.Python语言基础/15_进阶专题/: 15_进阶专题.md
02.开发环境及框架介绍/: 02.开发环境及框架介绍.md
02.开发环境及框架介绍/04_FastAPI_深度专题/: 02_路由与依赖注入进阶.md  03_数据模型与校验_Pydantic2.md  04_数据库与事务.md  05_认证与授权.md  06_中间件与跨切面.md  07_异步与背景任务.md  08_WebSocket与实时推送.md  README.md
03.项目实战/: 03.项目实战.md  Web_实战学习路线_Java开发者版.md  Web_接口开发_总览.md
03.项目实战/01_命令行工具_批量重命名文件/: 01_项目说明.md  rename_files.py  test_rename_files.py  test_rename_files_extra.py
03.项目实战/02_日志分析与报表生成/: 02_项目说明.md  log_analyzer.py  test_log_analyzer.py  test_log_analyzer_extra.py
03.项目实战/03_TODO_Web_API_FastAPI/: 03_项目说明.md  test_todo_api.py
03.项目实战/04_小型数据分析项目_销售统计/: 04_项目说明.md  analyze_sales.py  test_analyze_sales.py
03.项目实战/05_简单爬虫_新闻标题抓取/: 05_项目说明.md  crawler_news_titles.py  test_crawler_news_titles.py
03.项目实战/06_自动化脚本_日志归档/: 06_项目说明.md  archive_old_logs.py  test_archive_old_logs.py  (+1 more)
backend_user_order_service/: 09_项目说明.md  test_backend_user_order_service.py
bookkeeping_app/: api.py  build.py  config.json  icon.icns  main.py  图标使用说明.md
desktop_tools/: api.py  build.py  config.json  icon.icns  main.py  使用指南.md  图标使用说明.md
docs/: Java_vs_Python_CheatSheet.md  Python学习规划_Java开发者版.md  architecture.md  快速开始与依赖.md  文档导航与精简说明.md  查漏补缺清单.md  模块总览_接口到实现导航.md  项目结构总览_前端到后端调用链.md
frontend/: README.md  admin.html  common.js  config.js  doc-viewer.html  index.html  log-detective.html  login.html  mock-api.js  mock-data.js  portal.html  projects.html  user.backup
integration_gateway_service/: 09_项目说明.md  README.md  test_integration_gateway_service.py
log_audit_service/: 09_项目说明.md  test_log_audit_service.py
log_detective_service/: 09_项目说明.md  test_log_detective_service.py
rabbitmq-demo/: README.md  docker-compose.yml
rbac_auth_service/: 09_Project_业务域_说明.md  09_项目说明.md  init_rbac_data.py  test_rbac_api.py  项目结构说明.md
todo_app/: api.py  build.py  main.py  requirements.txt
(+225 files in other folders)
